--- a/requirements.txt
+++ b/requirements.txt
@@ -33,3 +33,7 @@ torchmetrics>=1.2.0
 tqdm>=4.65.0
 matplotlib>=3.7.0
 seaborn>=0.12.0
+
+# ControlNet dependencies
+mediapipe>=0.10.0  # For pose detection
+controlnet-aux>=0.0.6  # Control preprocessors (optional)
